--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,10 +22,10 @@ jobs:
           outputs: dist/snake.svg
 
 
-      - name: push snake.svg to the main branch
+      - name: push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
-          target_branch: main
+          target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
